--- a/senwatch_data/package.json
+++ b/senwatch_data/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.18.0",
+    "cors": "^2.8.4",
     "express": "^4.16.3",
     "serve-favicon": "^2.5.0"
   }
