--- a/senwatch_data/package.json
+++ b/senwatch_data/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.18.0",
     "cors": "^2.8.4",
     "express": "^4.16.3",
+    "lodash": "^4.17.10",
     "request": "^2.88.0",
     "serve-favicon": "^2.5.0"
   }
